<resources>
    <string name="app_name">InventoryApp2</string>
    <string name="string_add_some_data">Add some Data</string>
    <string name="string_no_data_here">No Data Here</string>
    <string name="string_product_name">Product name</string>
    <string name="string_name">Name</string>
    <string name="string_price">Price</string>
    <string name="string_quantity">Quantity</string>
    <string name="string_supplier">Supplier</string>
    <string name="string_phone">Phone(Only 6 Digits)</string>
    <string name="string_sale">Sale</string>
    <string name="action_insert_dummy_data">Insert Dummy Data</string>
    <string name="action_delete_all_data">Delete all Data</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="editor_insert_book_successful">Book saved</string>
    <string name="editor_insert_book_failed">Error with saving book</string>
    <string name="editor_update_book_failed">Error with updating book</string>
    <string name="editor_update_book_successful">Book updated</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="delete_dialog_msg">Delete this book?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="editor_delete_book_successful">Book deleted</string>
    <string name="editor_delete_book_failed">Error with deleting book</string>
    <string name="string_cannot_be_emty">Cannot be Empty</string>
    <string name="string_order">Order</string>
    <string name="toast_text_name">Name must be required to continue</string>
    <string name="toast_text_price">Price cannot be empty or negative</string>
    <string name="toast_text_quantity">Quantity cannot be less than zero</string>
    <string name="toast_text_supplier">Supplier name cannot be empty</string>
    <string name="toast_text_number">Supplier number cannot be empty</string>
</resources>